--- a/index.html
+++ b/index.html
@@ -5,7 +5,23 @@
     <title>Title</title>
   <link rel="stylesheet" type="text/css" href="css/Style.css">
 </head>
+<header>
+
+</header>
 <body>
 
+<section>
+    <h1>404</h1>
+    <hr>
+    <p>Oops! Even John Travolta can't find the page you're looking for.</p>
+</section>
+
+<a href="https://github.com/NathanLombardelli">Go Back</a>
+
+
+<img src="images/travolta.gif">
 </body>
+<footer>
+
+</footer>
 </html>
